--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Lrahtk</string>
+    <string name="getstarted">GET STARTED</string>
+    <string name="getstarted1">Welcome to </string>
+    <string name="getstarted2"> Lrahtk</string>
+    <string name="getstarted3">
+        Each online store has its own store and bag,
+but if you want to go shopping in multiple
+places at once, so you only have one bag.
+    </string>
+
 </resources>
