--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@ places at once, so you only have one bag.
     <string name="email_error2">example: admin@google.com</string>
     <string name="password_error">الرجاء كتابة الرقم السري</string>
     <string name="password_error2">الرقم السري يجيب ان يكون   6 حروف</string>
-
+    <string name="ErroEmailAndPass">  يرجي التأكد من الأيميل والباسورد.</string>
     <string name="Register">الاشتراك</string>
     <string name="Phone_error">الرجاء كتابة رقم الهاتف</string>
 </resources>
