--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@ places at once, so you only have one bag.
     <string name="Register">الاشتراك</string>
     <string name="Phone_error">الرجاء كتابة رقم الهاتف</string>
     <string name="Check_Internet">تأكد من اتصالك بالانترنت</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
