--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,13 @@ places at once, so you only have one bag.
     <string name="Register">الاشتراك</string>
     <string name="Phone_error">الرجاء كتابة رقم الهاتف</string>
     <string name="Check_Internet">تأكد من اتصالك بالانترنت</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="charge">الشحن</string>
     <string name="pay">الدفع</string>
     <string name="confirm">التأكيد</string>
+    <string name="firstName">الاسم الاول</string>
+    <string name="secondName">الاسم الاخير</string>
+    <string name="address">العنوان</string>
+    <string name="Phone">رقم الهاتف</string>
+    <string name="continuation">استمرار</string>
 
 </resources>
