--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@ places at once, so you only have one bag.
     <string name="message">هل حقا انت متأكد ؟</string>
     <string name="yes">نعم</string>
     <string name="Ok">حسناً</string>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
