Fix Alot of things  .

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Lrahtk</string>
+    <string name="app_name">MAKTBTK</string>
     <string name="getstarted">GET STARTED</string>
     <string name="getstarted1">Welcome to </string>
-    <string name="getstarted2"> Lrahtk</string>
+    <string name="getstarted2"> MAKTBTK</string>
     <string name="getstarted3">
         Each online store has its own store and bag,
 but if you want to go shopping in multiple
