--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,11 @@ places at once, so you only have one bag.
     <string name="Ok">حسناً</string>
     <string name="title_activity_maps">Map</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="StudentName">اسم الطالب</string>
+    <string name="Class">الفصل</string>
+    <string name="Order">اطلب الان</string>
+
 
 </resources>
