--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,6 @@ places at once, so you only have one bag.
     <string name="Ok">حسناً</string>
     <string name="title_activity_maps">Map</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="StudentName">اسم الطالب</string>
     <string name="Class">الفصل</string>
@@ -56,6 +55,10 @@ places at once, so you only have one bag.
     <string name="Categories">الاقسام</string>
     <string name="price">السعر</string>
     <string name="filterBy">تصفية حسب</string>
+    <string name="FilterNow">تصفية الان</string>
+    <string name="all">الكل</string>
+    <string name="lessthan">اقل سعر</string>
+    <string name="MoreThan">اكبر سعر</string>
 
 
 </resources>
