--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">مكتبتك</string>
-    <string name="getstarted">GET STARTED</string>
-    <string name="getstarted1">Welcome to </string>
-    <string name="getstarted2"> MAKTBTK</string>
+    <string name="getstarted">ابدأ الان </string>
+    <string name="getstarted1"></string>
+    <string name="getstarted2"> مكتبتك اون لاين</string>
     <string name="getstarted3">
-        Each online store has its own store and bag,
-but if you want to go shopping in multiple
-places at once, so you only have one bag.
+مكتبتك اون لاين
+اول تطبيق في مصر لشراء الكتب الخارجيه والادوات المدرسيه وتوصيلها الي المنزل
+وتوفير الوقت والجهد وتجنب الزحمه  مع وجود خصومات وعروض وهدايا كتير لمستخدمي التطبيق
     </string>
     <string name="skippingtext">تخطي</string>
     <string name="UserName">البريد الالكتروني</string>
